POWR-1223 Apply 2-col layout and configure elected official default display

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -18,12 +18,18 @@ dependencies:
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+    - image.style.portrait_3_4_285w
   module:
+    - address
     - ds
+    - field_group
+    - image
+    - telephone
 third_party_settings:
   ds:
     layout:
@@ -33,9 +39,10 @@ third_party_settings:
       entity_classes: all_classes
       settings:
         wrappers:
-          pageContent: div
-          sideColumn: div
-          postContent: div
+          top_left: div
+          top_right: div
+          center: div
+          bottom: div
         outer_wrapper: div
         attributes: ''
         link_attribute: ''
@@ -43,55 +50,120 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      sideColumn:
-        - field_official_title
-      pageContent:
+      top_left:
+        - field_portrait
+      top_right:
         - field_summary
-        - group_site_menu_entity_view_1
+      center:
+        - field_phone
+        - group_contact
+        - field_email
+        - field_address
+      bottom:
         - field_featured_content
         - field_featured_groups
-        - field_bureaus
+  field_group:
+    group_contact:
+      children:
+        - field_phone
+        - field_email
+        - field_address
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
+        element: div
+        show_label: true
+        label_element: h2
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: py-4
+      label: Contact
+      region: hidden
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
-  field_bureaus:
-    type: entity_reference_label
-    weight: 5
-    region: pageContent
-    label: above
-    settings:
-      link: true
+  field_address:
+    type: address_default
+    weight: 4
+    region: center
+    label: visually_hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_email:
+    type: email_mailto
+    weight: 3
+    region: center
+    label: visually_hidden
+    settings: {  }
     third_party_settings: {  }
   field_featured_content:
-    type: entity_reference_label
+    type: entity_reference_entity_view
     weight: 3
-    region: pageContent
+    region: bottom
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_featured_groups:
-    type: entity_reference_label
+    type: entity_reference_entity_view
     weight: 4
-    region: pageContent
+    region: bottom
     label: above
     settings:
-      link: true
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_phone:
+    type: telephone_link
+    weight: 2
+    region: center
+    label: visually_hidden
+    settings:
+      title: ''
     third_party_settings: {  }
-  field_official_title:
-    type: string
+  field_portrait:
+    type: image
     weight: 0
-    region: sideColumn
-    label: above
+    region: top_left
+    label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      image_style: portrait_3_4_285w
+      image_link: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     type: string
     weight: 1
-    region: pageContent
+    region: top_right
     label: hidden
     settings:
       link_to_entity: false
@@ -113,7 +185,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: p
-            fi-cl: lead
+            fi-cl: 'lead md:pt-4'
             fi-at: ''
             suffix: ''
             lbw: false
@@ -124,17 +196,11 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  group_site_menu_entity_view_1:
-    weight: 2
-    region: pageContent
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
-  field_address: true
   field_building: true
-  field_email: true
+  field_bureaus: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
@@ -142,8 +208,9 @@ hidden:
   field_enable_projects_menu_item: true
   field_legacy_path: true
   field_menu_link: true
-  field_phone: true
+  field_official_title: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  group_site_menu_entity_view_1: true
   label: true
   uid: true
