--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -51,14 +51,16 @@ cloudy_main_with_sidebar:
       label: Secondary
 
 cloudy_two_column_pattern:
-  label: Cloudy two column pattern
+  label: Cloudy two column stacked pattern
   category: Cloudy
-  template: templates/layout/cloudy-two-column-pattern
+  template: templates/layout/cloudy-2col-stacked
   class: '\Drupal\ds\Plugin\DsLayout'
   regions:
-    pageContent:
-      label: Content
-    sideColumn:
-      label: Side Column
-    postContent:
-      label: Post content
+    top_left:
+      label: Top left
+    top_right:
+      label: Top right
+    center:
+      label: Center
+    bottom:
+      label: Bottom
