--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -18,14 +18,18 @@ dependencies:
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+    - image.style.portrait_3_4_285w
   module:
     - address
     - cleave
     - field_group
+    - focal_point
+    - lightning_media
     - maxlength
     - menu_link
 third_party_settings:
@@ -35,9 +39,8 @@ third_party_settings:
         - field_address
         - field_email
         - field_phone
-        - field_building
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: fieldset
       format_settings:
         id: contact-information
@@ -54,7 +57,7 @@ third_party_settings:
         - field_enable_offices_and_program
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: fieldset
       format_settings:
         id: ''
@@ -74,17 +77,8 @@ content:
     third_party_settings: {  }
     type: address_default
     region: content
-  field_building:
-    weight: 9
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_bureaus:
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -101,50 +95,41 @@ content:
     type: email_default
     region: content
   field_enable_events_menu_item:
-    weight: 10
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_enable_guides_and_informat:
-    weight: 8
+    weight: 1
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_enable_news_and_notices_me:
-    weight: 9
+    weight: 2
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_enable_offices_and_program:
-    weight: 11
+    weight: 4
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_enable_projects_menu_item:
-    weight: 12
+    weight: 5
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_featured_content:
-    weight: 6
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_featured_groups:
     weight: 7
     settings:
       match_operator: CONTAINS
@@ -153,8 +138,17 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_featured_groups:
+    weight: 8
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_legacy_path:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -162,7 +156,7 @@ content:
     type: string_textfield
     region: content
   field_menu_link:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -183,8 +177,21 @@ content:
     third_party_settings: {  }
     type: telephone_cleave
     region: content
+  field_portrait:
+    type: image_focal_point
+    weight: 4
+    settings:
+      preview_image_style: portrait_3_4_285w
+      preview_link: true
+      offsets: '50,50'
+      progress_indicator: throbber
+    region: content
+    third_party_settings:
+      lightning_media:
+        file_links: true
+        remove_button: true
   field_search_keywords:
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -200,7 +207,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 4
+    weight: 3
     settings:
       rows: 2
       placeholder: ''
@@ -221,5 +228,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
 hidden:
+  field_building: true
   path: true
   uid: true
