POWR-1223 Add social media fields to elected official group

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -12,8 +12,10 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_facebook
     - field.field.group.elected_official.field_featured_content
     - field.field.group.elected_official.field_featured_groups
+    - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
@@ -22,6 +24,7 @@ dependencies:
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
+    - field.field.group.elected_official.field_twitter
     - group.type.elected_official
     - image.style.portrait_3_4_285w
   module:
@@ -30,15 +33,19 @@ dependencies:
     - field_group
     - focal_point
     - lightning_media
+    - link
     - maxlength
     - menu_link
 third_party_settings:
   field_group:
     group_contact_information:
       children:
-        - field_address
-        - field_email
         - field_phone
+        - field_email
+        - field_facebook
+        - field_twitter
+        - field_instagram
+        - field_address
       parent_name: ''
       weight: 5
       format_type: fieldset
@@ -57,7 +64,7 @@ third_party_settings:
         - field_enable_offices_and_program
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 6
+      weight: 7
       format_type: fieldset
       format_settings:
         id: ''
@@ -72,13 +79,13 @@ bundle: elected_official
 mode: default
 content:
   field_address:
-    weight: 6
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_bureaus:
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -87,7 +94,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_email:
-    weight: 7
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -129,16 +136,15 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_featured_content:
-    weight: 7
+  field_facebook:
+    weight: 9
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      placeholder_url: 'https://www.facebook.com/username'
+      placeholder_title: username
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: link_default
     region: content
-  field_featured_groups:
+  field_featured_content:
     weight: 8
     settings:
       match_operator: CONTAINS
@@ -147,8 +153,25 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_legacy_path:
+  field_featured_groups:
+    weight: 9
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_instagram:
     weight: 11
+    settings:
+      placeholder_url: 'https://www.instagram.com/username'
+      placeholder_title: username
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_legacy_path:
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -156,7 +179,7 @@ content:
     type: string_textfield
     region: content
   field_menu_link:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -170,7 +193,7 @@ content:
     type: string_textfield
     region: content
   field_phone:
-    weight: 8
+    weight: 7
     settings:
       placeholder: ''
       country: US
@@ -191,7 +214,7 @@ content:
         file_links: true
         remove_button: true
   field_search_keywords:
-    weight: 12
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -218,6 +241,14 @@ content:
         maxlength_js_enforce: true
         maxlength_js_truncate_html: true
     type: string_textarea
+    region: content
+  field_twitter:
+    weight: 10
+    settings:
+      placeholder_url: 'https://twitter.com/username'
+      placeholder_title: username
+    third_party_settings: {  }
+    type: link_default
     region: content
   label:
     type: string_textfield
