--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -12,8 +12,10 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_facebook
     - field.field.group.elected_official.field_featured_content
     - field.field.group.elected_official.field_featured_groups
+    - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
@@ -22,6 +24,7 @@ dependencies:
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
+    - field.field.group.elected_official.field_twitter
     - group.type.elected_official
     - image.style.portrait_3_4_285w
   module:
@@ -29,6 +32,7 @@ dependencies:
     - ds
     - field_group
     - image
+    - link
     - telephone
 third_party_settings:
   ds:
@@ -58,6 +62,9 @@ third_party_settings:
         - field_phone
         - group_contact
         - field_email
+        - field_facebook
+        - field_twitter
+        - field_instagram
         - field_address
       bottom:
         - field_featured_content
@@ -67,6 +74,9 @@ third_party_settings:
       children:
         - field_phone
         - field_email
+        - field_facebook
+        - field_twitter
+        - field_instagram
         - field_address
       parent_name: ''
       weight: 2
@@ -90,7 +100,7 @@ mode: default
 content:
   field_address:
     type: address_default
-    weight: 4
+    weight: 7
     region: center
     label: visually_hidden
     settings: {  }
@@ -102,6 +112,18 @@ content:
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
+  field_facebook:
+    weight: 4
+    label: visually_hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: center
   field_featured_content:
     type: entity_reference_entity_view
     weight: 3
@@ -136,6 +158,18 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_instagram:
+    weight: 6
+    label: visually_hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: center
   field_phone:
     type: telephone_link
     weight: 2
@@ -196,6 +230,18 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+  field_twitter:
+    weight: 5
+    label: visually_hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: center
 hidden:
   changed: true
   created: true
