POWR-1181 group permissions

--- a/web/sites/default/config/group.role.elected_official-editor.yml
+++ b/web/sites/default/config/group.role.elected_official-editor.yml
@@ -20,7 +20,6 @@ permissions:
   - 'create group_media:video entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
-  - 'create group_node:notification entity'
   - 'create group_node:page entity'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document entity'
@@ -30,6 +29,7 @@ permissions:
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page entity'
+  - 'leave group'
   - 'update any group_media:audio entity'
   - 'update any group_media:document entity'
   - 'update any group_media:image entity'
@@ -46,6 +46,7 @@ permissions:
   - 'update own group_node:news entity'
   - 'update own group_node:notification entity'
   - 'update own group_node:page entity'
+  - 'view group'
   - 'view group_media:audio entity'
   - 'view group_media:document entity'
   - 'view group_media:image entity'
