--- a/web/sites/default/config/group.role.bureau_office-editor.yml
+++ b/web/sites/default/config/group.role.bureau_office-editor.yml
@@ -13,6 +13,7 @@ group_type: bureau_office
 permissions_ui: true
 permissions:
   - 'access group_media overview'
+  - 'access group_node overview'
   - 'create group_media:audio entity'
   - 'create group_media:document entity'
   - 'create group_media:image entity'
@@ -21,7 +22,6 @@ permissions:
   - 'create group_node:development_permit entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
-  - 'create group_node:notification entity'
   - 'create group_node:page entity'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document entity'
