POWR-1341 update the email template a bit

--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_on_content_creation.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_on_content_creation.yml
@@ -28,6 +28,16 @@ expression:
         provides_mapping: {  }
         condition_id: portland_in_review_and_has_reviewer
         negate: false
+      -
+        id: rules_condition
+        uuid: 733a13c7-ff59-42ae-893f-e6ad72435cf5
+        context_values: {  }
+        context_mapping:
+          entity: node
+        context_processors: {  }
+        provides_mapping: {  }
+        condition_id: rules_entity_is_new
+        negate: false
   actions:
     id: rules_action_set
     uuid: 00842519-e1b9-4549-a3a5-4ad9ae242833
@@ -39,7 +49,7 @@ expression:
           to:
             - '{{node.field_reviewer.entity.mail.value}}'
           subject: 'Portland.gov reviewer assignment'
-          message: "<div><a href=\\\"{{node.revision_uid.entity|entity_url}}\\\">{{node.revision_uid.entity.name.value}}</a> has assigned you to review <a href=\\\"{{node | entity_url }}\\\"> {{node.title.value}} </a></div>\r\n{% if node.revision_log.value %}\r\n<div><h3>Revision log:</h3>\r\n<p>{{node.revision_log.value}}</p>\r\n{% endif %}\r\n<div>Last updated: {{node.changed.value | format_date('custom', 'l Y/n/j g:i A')}} </div>"
+          message: "<div><a href=\"{{node.revision_uid.entity|entity_url}}\">{{node.revision_uid.entity.name.value}}</a> has assigned you to review <a href=\"{{node | entity_url }}\"> {{node.title.value}} </a></div>\r\n<p/>\r\n<div><h3>Revision log:</h3>\r\n{{node.revision_log.value}}</div>\r\n<p/>\r\n<div>Last updated: {{node.changed.value | format_date('custom', 'l Y/n/j g:i A')}} </div>"
           reply: ''
           language: ''
         context_mapping: {  }
