POWR-1345 field_group was required causing media add to fail

--- a/web/sites/default/config/field.field.media.video.field_group.yml
+++ b/web/sites/default/config/field.field.media.video.field_group.yml
@@ -22,7 +22,7 @@ entity_type: media
 bundle: video
 label: Group
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
