--- a/web/sites/default/config/field.field.media.document.field_group.yml
+++ b/web/sites/default/config/field.field.media.document.field_group.yml
@@ -22,7 +22,7 @@ entity_type: media
 bundle: document
 label: Group
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
