POWR-1344 switched to published on instead of post date on news

--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.news.field_topics
     - node.type.news
   module:
+    - datetime
     - ds
     - panelizer
     - text
@@ -41,16 +42,10 @@ third_party_settings:
         - field_featured_media
         - posted_in_entity_view_1
         - field_news_type
-        - node_post_date
+        - field_published_on
         - field_summary
         - field_body_content
         - field_location
-    fields:
-      node_post_date:
-        plugin_id: node_post_date
-        weight: 3
-        label: inline
-        formatter: ds_post_date_long
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -140,6 +135,22 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_published_on:
+    type: datetime_default
+    weight: 3
+    region: content
+    label: inline
+    settings:
+      timezone_override: ''
+      format_type: long
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 4
     label: hidden
@@ -188,7 +199,6 @@ hidden:
   field_feature_until: true
   field_group: true
   field_legacy_path: true
-  field_published_on: true
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
