POWR-1181 fix some group views

--- a/web/sites/default/config/group.role.project-editor.yml
+++ b/web/sites/default/config/group.role.project-editor.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.project
 id: project-editor
 label: Editor
-weight: 106
+weight: -10
 internal: false
 audience: member
 group_type: project
@@ -29,6 +29,7 @@ permissions:
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page entity'
+  - 'leave group'
   - 'update any group_media:audio entity'
   - 'update any group_media:document entity'
   - 'update any group_media:image entity'
@@ -45,10 +46,12 @@ permissions:
   - 'update own group_node:news entity'
   - 'update own group_node:notification entity'
   - 'update own group_node:page entity'
+  - 'view group'
   - 'view group_media:audio entity'
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
