--- a/web/sites/default/config/views.view.my_groups.yml
+++ b/web/sites/default/config/views.view.my_groups.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.group_content.group_roles
     - system.menu.editor-toolbar
+    - user.role.authenticated
   module:
     - group
     - user
@@ -24,8 +25,10 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: role
+        options:
+          role:
+            authenticated: authenticated
       cache:
         type: tag
         options: {  }
@@ -354,13 +357,13 @@ display:
           absolute: false
           entity_type: group
           plugin_id: entity_link_edit
-        nothing:
-          id: nothing
-          table: views
-          field: nothing
+        edit_group_content:
+          id: edit_group_content
+          table: group_content
+          field: edit_group_content
           relationship: none
           group_type: group
-          admin_label: 'Add content or media'
+          admin_label: ''
           label: Add
           exclude: false
           alter:
@@ -394,15 +397,19 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
-          hide_alter_empty: false
-          plugin_id: custom
+          hide_alter_empty: true
+          text: edit
+          output_url_as_text: false
+          absolute: false
+          entity_type: group_content
+          plugin_id: entity_link_edit
       filters: {  }
       sorts: {  }
       title: 'My groups'
@@ -492,6 +499,7 @@ display:
         - url
         - url.query_args
         - user
+        - user.roles
       tags:
         - 'config:field.storage.group_content.group_roles'
         - extensions
@@ -552,6 +560,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user.roles
       tags:
         - 'config:field.storage.group_content.group_roles'
         - extensions
@@ -580,6 +589,7 @@ display:
         - url
         - url.query_args
         - user
+        - user.roles
       tags:
         - 'config:field.storage.group_content.group_roles'
         - extensions
