--- a/web/sites/default/config/group.role.bureau_office-editor.yml
+++ b/web/sites/default/config/group.role.bureau_office-editor.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.bureau_office
 id: bureau_office-editor
 label: Editor
-weight: 103
+weight: -10
 internal: false
 audience: member
 group_type: bureau_office
@@ -59,6 +59,7 @@ permissions:
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit entity'
   - 'view group_node:event entity'
