--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,12 +12,15 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
+  - 'access group_media overview'
+  - 'access group_node overview'
   - 'leave group'
   - 'view group'
   - 'view group_media:audio entity'
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit entity'
   - 'view group_node:event entity'
