--- a/web/sites/default/config/group.role.program-editor.yml
+++ b/web/sites/default/config/group.role.program-editor.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.program
 id: program-editor
 label: Editor
-weight: 105
+weight: -10
 internal: false
 audience: member
 group_type: program
@@ -33,6 +33,7 @@ permissions:
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page entity'
+  - 'leave group'
   - 'update any group_media:audio entity'
   - 'update any group_media:document entity'
   - 'update any group_media:image entity'
@@ -53,10 +54,12 @@ permissions:
   - 'update own group_node:news entity'
   - 'update own group_node:notification entity'
   - 'update own group_node:page entity'
+  - 'view group'
   - 'view group_media:audio entity'
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit entity'
   - 'view group_node:event entity'
