--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -12,6 +12,8 @@ audience: member
 group_type: project
 permissions_ui: true
 permissions:
+  - 'access group_media overview'
+  - 'access group_node overview'
   - 'create group_node:city_service entity'
   - 'delete own group_node:city_service entity'
   - 'leave group'
@@ -22,6 +24,7 @@ permissions:
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:city_service entity'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
