POWR-1181 fix elected official visibility of group views

--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -12,6 +12,8 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
+  - 'access group_media overview'
+  - 'access group_node overview'
   - 'leave group'
   - 'view group'
   - 'view group_media:audio entity'
