--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
+        "drupal/createandcontinue": "^1.2",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/custom_view_filters": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
