--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -34,6 +34,7 @@ content_lock_timeout: 1.0.0-alpha8
 content_moderation: 0.0.0
 contextual: 0.0.0
 copyright_block: 1.0.0-rc2
+createandcontinue: 1.2.0
 crop: 0.0.0
 csv_serialization: 1.4.0
 ctools: 0.0.0
@@ -149,6 +150,7 @@ paragraphs: 0.0.0
 path: 0.0.0
 pathauto: 0.0.0
 portland: 0.0.0
+portland_edit_forms: 0.1.0
 portland_legacy_redirects: 0.1.0
 portland_media_embed_helper: 0.1.0
 portland_migrations: 0.0.0
@@ -210,4 +212,3 @@ webform: 5.0.0-rc22
 webform_ui: 5.0.0-rc22
 workflows: 0.0.0
 yearonly: 1.3.0
-portland_edit_forms: 0.1.0
