POWR-1245 Replaced logo

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -20,13 +20,13 @@ bootstrap_barrio_table_hover: 1
 _core:
   default_config_hash: 78qpB4gShKy__Mqle_dzCnNVnSf-dprQszBls-TYr5Q
 features:
-  node_user_picture: true
+  node_user_picture: 1
   comment_user_picture: true
   comment_user_verification: true
   favicon: 1
 logo:
   use_default: 0
-  path: themes/custom/cloudy/images/logo-v2.svg
+  path: themes/custom/cloudy/images/logo.svg
 favicon:
   use_default: 1
   path: themes/custom/cloudy/favicon.ico
