--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
         "drupal/views_data_export": "^1.0@beta",
+        "drupal/views_entity_form_field": "^1.0@beta",
         "drupal/views_filters_populate": "^1.1",
         "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.1",
