--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -184,6 +184,7 @@ module:
   video_embed_media: 0
   views_bulk_operations: 0
   views_data_export: 0
+  views_entity_form_field: 0
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
