--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -205,6 +205,7 @@ video_embed_media: 0.0.0
 views: 0.0.0
 views_bulk_operations: 2.2.0
 views_data_export: 1.0.0-beta1
+views_entity_form_field: 1.0.0-beta7
 views_infinite_scroll: 0.0.0
 views_ui: 0.0.0
 viewsreference: 0.0.0
