POWR-1193 enable contentimport module for poc

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
+        "drupal/contentimport": "^4.1",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/createandcontinue": "^1.2",
         "drupal/custom_add_another": "^1.0@beta",
