--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -28,6 +28,7 @@ permissions:
   - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'break content lock'
+  - 'create calendar_item content'
   - 'create location content'
   - 'create media'
   - 'delete own location content'
