--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -29,6 +29,7 @@ module:
   content_lock: 0
   content_lock_timeout: 0
   content_moderation: 0
+  contentimport: 0
   contextual: 0
   copyright_block: 0
   createandcontinue: 0
