--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -32,6 +32,7 @@ contact: 0.0.0
 contact_storage: 0.0.0
 content_lock_timeout: 1.0.0-alpha8
 content_moderation: 0.0.0
+contentimport: 4.1.0
 contextual: 0.0.0
 copyright_block: 1.0.0-rc2
 createandcontinue: 1.2.0
