--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ build_and_deploy: &build_and_deploy
                 terminus multidev:delete --delete-branch portlandor.${BASH_REMATCH[2]} -y
               fi
             fi
-          else
+          else  # All other commits deploy to a multidev
             # Set Pantheon environment name
             if [[ $CIRCLE_BRANCH =~ ^dependabot\/ ]] && [[ $CIRCLE_PULL_REQUEST =~ \/pull\/([0-9]+)$ ]]; then
               echo "export PANTHEON_ENV=bot-${BASH_REMATCH[1]}" >> $BASH_ENV && source $BASH_ENV
@@ -173,10 +173,27 @@ build_and_deploy: &build_and_deploy
             # Force push $CIRCLE_BRANCH to Pantheon as branch named $PANTHEON_ENV
             git push -f pantheon $CIRCLE_BRANCH:$PANTHEON_ENV
             
-            # Trigger "Test" job for Dependabot dependency updates
             if [[ $CIRCLE_BRANCH =~ ^dependabot\/ ]]; then
-              echo "Triggering test job for Dependabot PR (after sleeping for 3 minutes)"
-              sleep 180 # allow time for code sync
+              echo "Dependabot branch detected..."
+              
+              # Set the connection type to SFTP
+              terminus connection:set portlandor.$PANTHEON_ENV sftp
+
+              # Clone database from DEV
+              # This is necessary if the build gets re-run because the drush cim in the sync_code event can
+              # interfere with the drush cex below
+              terminus env:clone-content portlandor.dev $PANTHEON_ENV --db-only --cc -y
+              terminus drush portlandor.$PANTHEON_ENV -- cim -y
+
+              # Abort if there's any database updates that cause a configuration change
+              echo "Run database update... and abort if there's a configuration change"
+              echo "IMPORTANT: If there's a configuation change, download this branch and manually update the dependency"
+              terminus drush portlandor.$PANTHEON_ENV -- updb -y
+              terminus drush portlandor.$PANTHEON_ENV -- cex --no   # this will return failure code if there's config to export
+
+              # Trigger "Test" job for Dependabot dependency updates because it's not run via circleci_webhook.php for these branches
+              echo "Triggering test job for Dependabot PR"
+              #sleep 180 # allow time for sync_code event -- no longer necessary due to time required for database cloning
               curl --user ${CIRCLE_API_USER_TOKEN}: \
                 --data build_parameters[CIRCLE_JOB]=test \
                 --data revision=$CIRCLE_SHA1 \
