POWR-1129 Fail on patch failure and check for DB updates

--- a/composer.json
+++ b/composer.json
@@ -157,6 +157,7 @@
             "npm-asset"
         ],
         "enable-patching": true,
+        "composer-exit-on-patch-failure": 1,
         "patchLevel": {
             "drupal/core": "-p2"
         },
