--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,8 +173,23 @@ build_and_deploy: &build_and_deploy
             # Force push $CIRCLE_BRANCH to Pantheon as branch named $PANTHEON_ENV
             git push -f pantheon $CIRCLE_BRANCH:$PANTHEON_ENV
             
-            # Trigger "Test" job for Dependabot dependency updates
             if [[ $CIRCLE_BRANCH =~ ^dependabot\/ ]]; then
+              echo "Dependabot branch detected..."
+              
+              # Set the connection type to SFTP
+              terminus connection:set portlandor.$PANTHEON_ENV sftp
+
+              # Check if there's any database updates and fail
+              terminus drush portlandor.$PANTHEON_ENV updb -y
+              terminus drush portlandor.$PANTHEON_ENV cex -n > ./cex.txt
+              if grep -Fq "Differences of the active config to the export directory" ./cex.txt; then
+                rm -rf ./cex.txt
+                echo "WARNING: Database updates found. Please download branch locally and manually update."
+                exit 1
+              fi
+              rm -rf ./cex.txt
+
+              # Trigger "Test" job for Dependabot dependency updates
               echo "Triggering test job for Dependabot PR (after sleeping for 3 minutes)"
               sleep 180 # allow time for code sync
               curl --user ${CIRCLE_API_USER_TOKEN}: \
