POWR-1117 add a patch to allow tokens in redirect

--- a/composer.json
+++ b/composer.json
@@ -210,6 +210,9 @@
             },
             "drupal/sendgrid_integration": {
                 "2994706: Emails - empty From name and email address": "https://www.drupal.org/files/issues/2019-03-22/sendgrid_integration-empty_from_values-2994706-19.patch"
+            },
+            "drupal/rabbity_hole": {
+                "3060274 - Tokens as redirect": "https://www.drupal.org/files/issues/2019-08-22/rabbit_hole-tokens_as_redirect-3060274-7.patch"
             }
         },
         "merge-plugin": {
