--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -149,6 +149,7 @@ paragraphs: 0.0.0
 path: 0.0.0
 pathauto: 0.0.0
 portland: 0.0.0
+portland_edit_forms: 0.1.0
 portland_legacy_redirects: 0.1.0
 portland_media_embed_helper: 0.1.0
 portland_migrations: 0.0.0
@@ -164,6 +165,7 @@ redirect_404: 1.1.0
 remove_http_headers: 1.0.0-alpha3
 responsive_image: 0.0.0
 rest: 8.6.2
+rh_group: 1.0.0-beta6
 rh_node: 1.0.0-beta4
 rules: 3.0.0-alpha4
 schemata: 0.0.0
@@ -210,4 +212,3 @@ webform: 5.0.0-rc22
 webform_ui: 5.0.0-rc22
 workflows: 0.0.0
 yearonly: 1.3.0
-portland_edit_forms: 0.1.0
