POWR-1117 pathauto patterns, display modes, rabbit hole patch for tokens

--- a/web/sites/default/config/core.entity_view_display.node.external_resource.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.external_resource.featured.yml
@@ -1,8 +1,9 @@
-uuid: bd24b98a-40dd-4e75-b22c-ffd784b1a6e9
+uuid: 5040fcda-984f-42a3-b72f-72510973aa82
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.external_resource.field_destination_url
     - field.field.node.external_resource.field_summary
     - node.type.external_resource
@@ -15,10 +16,10 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.external_resource.default
+id: node.external_resource.featured
 targetEntityType: node
 bundle: external_resource
-mode: default
+mode: featured
 content:
   field_summary:
     weight: 0
