--- a/web/sites/default/config/core.entity_view_display.node.external_resource.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.external_resource.related.yml
@@ -1,8 +1,9 @@
-uuid: bd24b98a-40dd-4e75-b22c-ffd784b1a6e9
+uuid: a2238957-eeb9-4db7-97ed-1ac2b66bc621
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.related
     - field.field.node.external_resource.field_destination_url
     - field.field.node.external_resource.field_summary
     - node.type.external_resource
@@ -15,10 +16,10 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.external_resource.default
+id: node.external_resource.related
 targetEntityType: node
 bundle: external_resource
-mode: default
+mode: related
 content:
   field_summary:
     weight: 0
