--- a/web/sites/default/config/rabbit_hole.behavior_settings.node_type_external_resource.yml
+++ b/web/sites/default/config/rabbit_hole.behavior_settings.node_type_external_resource.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - node.type.external_resource
 id: node_type_external_resource
-action: display_page
+action: page_redirect
 allow_override: 1
 redirect: '[node:field_destination_url:uri]'
 redirect_code: 301
