POWR-1223 Add elected official layout template

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -26,6 +26,8 @@ dependencies:
     - address
     - cleave
     - field_group
+    - focal_point
+    - lightning_media
     - maxlength
     - menu_link
 third_party_settings:
@@ -135,6 +137,14 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_facebook:
+    weight: 9
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_featured_content:
     weight: 6
     settings:
@@ -152,6 +162,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_instagram:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_legacy_path:
     weight: 10
@@ -211,6 +229,14 @@ content:
         maxlength_js_enforce: true
         maxlength_js_truncate_html: true
     type: string_textarea
+    region: content
+  field_twitter:
+    weight: 10
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   label:
     type: string_textfield
