--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -24,18 +24,23 @@ dependencies:
     - group.type.elected_official
   module:
     - ds
+    - image
+    - telephone
 third_party_settings:
   ds:
     layout:
-      id: cloudy_two_column_pattern
+      id: elected_official_homepage_pattern
       library: null
       disable_css: false
       entity_classes: all_classes
       settings:
         wrappers:
-          pageContent: div
-          sideColumn: div
-          postContent: div
+          top_left: div
+          top_right: div
+          center_left: div
+          center_center: div
+          center_right: div
+          bottom_center: div
         outer_wrapper: div
         attributes: ''
         link_attribute: ''
@@ -43,92 +48,114 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      sideColumn:
-        - field_official_title
-      pageContent:
+      top_left:
         - field_summary
-        - group_site_menu_entity_view_1
+      top_right:
+        - field_portrait
+      center_left:
+        - field_email
+        - field_phone
+      center_center:
+        - field_facebook
+        - field_twitter
+        - field_instagram
+      center_right:
+        - field_address
+      bottom_center:
         - field_featured_content
         - field_featured_groups
-        - field_bureaus
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
-  field_bureaus:
-    type: entity_reference_label
-    weight: 5
-    region: pageContent
-    label: above
+  field_address:
+    type: address_default
+    weight: 7
+    region: center_right
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_email:
+    type: email_mailto
+    weight: 2
+    region: center_left
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_facebook:
+    type: string
+    weight: 4
+    region: center_center
+    label: hidden
     settings:
-      link: true
+      link_to_entity: false
     third_party_settings: {  }
   field_featured_content:
-    type: entity_reference_label
-    weight: 3
-    region: pageContent
+    type: entity_reference_entity_view
+    weight: 8
+    region: bottom_center
     label: above
     settings:
       link: true
     third_party_settings: {  }
   field_featured_groups:
-    type: entity_reference_label
-    weight: 4
-    region: pageContent
+    type: entity_reference_entity_view
+    weight: 9
+    region: bottom_center
     label: above
     settings:
-      link: true
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_instagram:
+    weight: 6
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-  field_official_title:
     type: string
-    weight: 0
-    region: sideColumn
-    label: above
+    region: center_center
+  field_phone:
+    type: telephone_link
+    weight: 3
+    region: center_left
+    label: hidden
+    settings:
+      title: ''
+    third_party_settings: {  }
+  field_portrait:
+    type: image
+    weight: 1
+    region: top_right
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_summary:
     type: string
-    weight: 1
-    region: pageContent
+    weight: 0
+    region: top_left
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-  group_site_menu_entity_view_1:
-    weight: 2
-    region: pageContent
-    settings: {  }
     third_party_settings: {  }
+  field_twitter:
+    weight: 5
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: center_center
 hidden:
   changed: true
   created: true
