--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -50,15 +50,21 @@ cloudy_main_with_sidebar:
     secondary:
       label: Secondary
 
-cloudy_two_column_pattern:
-  label: Cloudy two column pattern
+elected_official_homepage_pattern:
+  label: Elected official homepage
   category: Cloudy
-  template: templates/layout/cloudy-two-column-pattern
   class: '\Drupal\ds\Plugin\DsLayout'
+  template: templates/layout/elected-official-homepage
   regions:
-    pageContent:
-      label: Content
-    sideColumn:
-      label: Side Column
-    postContent:
-      label: Post content
+    top_left:
+      label: Top left
+    top_right:
+      label: Top right
+    center_left:
+      label: Center left
+    center_center:
+      label: Center center
+    center_right:
+      label: Center right
+    bottom_center:
+      label: Bottom
