POWR-1223 Update elected official form and default displays

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -12,17 +12,23 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_facebook
     - field.field.group.elected_official.field_featured_content
     - field.field.group.elected_official.field_featured_groups
+    - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
+    - field.field.group.elected_official.field_twitter
     - group.type.elected_official
+    - image.style.portrait_3_4_285w
   module:
+    - address
     - ds
     - image
     - telephone
@@ -73,21 +79,21 @@ content:
     type: address_default
     weight: 7
     region: center_right
-    label: hidden
+    label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_email:
     type: email_mailto
     weight: 2
     region: center_left
-    label: hidden
+    label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_facebook:
     type: string
     weight: 4
     region: center_center
-    label: hidden
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -97,8 +103,17 @@ content:
     region: bottom_center
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_featured_groups:
     type: entity_reference_entity_view
     weight: 9
@@ -118,7 +133,7 @@ content:
             classes: {  }
   field_instagram:
     weight: 6
-    label: hidden
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -128,7 +143,7 @@ content:
     type: telephone_link
     weight: 3
     region: center_left
-    label: hidden
+    label: visually_hidden
     settings:
       title: ''
     third_party_settings: {  }
@@ -138,8 +153,16 @@ content:
     region: top_right
     label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      image_style: portrait_3_4_285w
+      image_link: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     type: string
     weight: 0
@@ -147,10 +170,38 @@ content:
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
   field_twitter:
     weight: 5
-    label: hidden
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -159,9 +210,8 @@ content:
 hidden:
   changed: true
   created: true
-  field_address: true
   field_building: true
-  field_email: true
+  field_bureaus: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
@@ -169,8 +219,9 @@ hidden:
   field_enable_projects_menu_item: true
   field_legacy_path: true
   field_menu_link: true
-  field_phone: true
+  field_official_title: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  group_site_menu_entity_view_1: true
   label: true
   uid: true
