--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -12,16 +12,21 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_facebook
     - field.field.group.elected_official.field_featured_content
     - field.field.group.elected_official.field_featured_groups
+    - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
+    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
+    - field.field.group.elected_official.field_twitter
     - group.type.elected_official
+    - image.style.portrait_3_4_285w
   module:
     - address
     - cleave
@@ -29,70 +34,53 @@ dependencies:
     - focal_point
     - lightning_media
     - maxlength
-    - menu_link
 third_party_settings:
   field_group:
     group_contact_information:
       children:
-        - field_address
         - field_email
         - field_phone
-        - field_building
+        - field_facebook
+        - field_twitter
+        - field_instagram
+        - field_address
       parent_name: ''
       weight: 3
-      format_type: fieldset
+      format_type: tabs
       format_settings:
         id: contact-information
         classes: ''
         description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
         required_fields: true
+        direction: vertical
       label: 'Contact Information'
       region: content
     group_site_menu:
       children:
-        - field_enable_guides_and_informat
-        - field_enable_news_and_notices_me
-        - field_enable_events_menu_item
-        - field_enable_offices_and_program
-        - field_enable_projects_menu_item
+        - uid
+        - path
+        - field_search_keywords
       parent_name: ''
-      weight: 5
-      format_type: fieldset
+      weight: 17
+      format_type: tabs
       format_settings:
         id: ''
         classes: ''
         description: 'Turn on menu items for types of content you publish or is related to your office.'
         required_fields: true
+        direction: vertical
       label: 'Site menu'
-      region: content
+      region: hidden
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
   field_address:
-    weight: 6
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: address_default
-    region: content
-  field_building:
-    weight: 9
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_bureaus:
-    weight: 8
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
     region: content
   field_email:
     weight: 7
@@ -102,51 +90,16 @@ content:
     third_party_settings: {  }
     type: email_default
     region: content
-  field_enable_events_menu_item:
-    weight: 10
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_enable_guides_and_informat:
-    weight: 8
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_enable_news_and_notices_me:
-    weight: 9
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_enable_offices_and_program:
-    weight: 11
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_enable_projects_menu_item:
-    weight: 12
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
   field_facebook:
+    type: string_textfield
     weight: 9
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_featured_content:
-    weight: 6
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
@@ -155,7 +108,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 7
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -164,35 +117,13 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_instagram:
+    type: string_textfield
     weight: 11
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_legacy_path:
-    weight: 10
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_menu_link:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: menu_link_default
-    region: content
-  field_official_title:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_phone:
     weight: 8
     settings:
@@ -201,24 +132,29 @@ content:
     third_party_settings: {  }
     type: telephone_cleave
     region: content
-  field_search_keywords:
-    weight: 11
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_shortname_or_acronym:
+  field_portrait:
+    type: image_focal_point
     weight: 2
     settings:
-      size: 60
+      preview_image_style: portrait_3_4_285w
+      preview_link: true
+      offsets: '50,50'
+      progress_indicator: throbber
+    region: content
+    third_party_settings:
+      lightning_media:
+        file_links: true
+        remove_button: true
+  field_shortname_or_acronym:
+    weight: 1
+    settings:
       placeholder: ''
+      size: 60
     third_party_settings: {  }
     type: string_textfield
     region: content
   field_summary:
-    weight: 4
+    weight: 0
     settings:
       rows: 2
       placeholder: ''
@@ -233,19 +169,23 @@ content:
   field_twitter:
     weight: 10
     settings:
-      size: 60
       placeholder: ''
+      size: 60
     third_party_settings: {  }
     type: string_textfield
     region: content
-  label:
-    type: string_textfield
-    weight: 0
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
 hidden:
+  field_building: true
+  field_bureaus: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_projects_menu_item: true
+  field_legacy_path: true
+  field_menu_link: true
+  field_official_title: true
+  field_search_keywords: true
+  label: true
   path: true
   uid: true
