POWR-1117 update an errant config.

--- a/web/sites/default/config/core.entity_view_display.node.external_resource.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.external_resource.teaser.yml
@@ -29,5 +29,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_destination_url: true
   group_content: true
   links: true
