POWR-1366 close form and add closed message.

--- a/web/sites/default/config/webform.webform.website_feedback.yml
+++ b/web/sites/default/config/webform.webform.website_feedback.yml
@@ -1,5 +1,6 @@
+uuid: 3a7da01d-48a2-41b6-835f-18f745481403
 langcode: en
-status: open
+status: closed
 dependencies: {  }
 open: null
 close: null
@@ -24,11 +25,11 @@ settings:
   page_submit_path: feedback
   page_confirm_path: thank-you-for-feedback
   page_admin_theme: false
-  form_title: both
+  form_title: source_entity_webform
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
-  form_close_message: ''
+  form_close_message: 'Our feedback form is temporarily closed. If you have feedback or suggestions for how we can improve this page, email the web team at powr@portlandoregon.gov.'
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
@@ -211,4 +212,3 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: cloudy
-uuid: 3a7da01d-48a2-41b6-835f-18f745481403
