POWR-1223 Add group menu items

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -57,20 +57,21 @@ third_party_settings:
       region: content
     group_site_menu:
       children:
-        - uid
-        - path
-        - field_search_keywords
+        - field_enable_news_and_notices_me
+        - field_enable_projects_menu_item
+        - field_enable_guides_and_informat
+        - field_enable_offices_and_program
+        - field_enable_events_menu_item
       parent_name: ''
-      weight: 17
-      format_type: tabs
+      weight: 4
+      format_type: fieldset
       format_settings:
+        description: 'Turn on menu items for types of content in your site.'
+        required_fields: true
         id: ''
         classes: ''
-        description: 'Turn on menu items for types of content you publish or is related to your office.'
-        required_fields: true
-        direction: vertical
       label: 'Site menu'
-      region: hidden
+      region: content
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
@@ -90,6 +91,41 @@ content:
     third_party_settings: {  }
     type: email_default
     region: content
+  field_enable_events_menu_item:
+    type: boolean_checkbox
+    weight: 19
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_enable_guides_and_informat:
+    type: boolean_checkbox
+    weight: 17
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_enable_news_and_notices_me:
+    type: boolean_checkbox
+    weight: 15
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_enable_offices_and_program:
+    type: boolean_checkbox
+    weight: 18
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_enable_projects_menu_item:
+    type: boolean_checkbox
+    weight: 16
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_facebook:
     type: string_textfield
     weight: 9
@@ -99,7 +135,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_featured_content:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -108,7 +144,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -177,11 +213,6 @@ content:
 hidden:
   field_building: true
   field_bureaus: true
-  field_enable_events_menu_item: true
-  field_enable_guides_and_informat: true
-  field_enable_news_and_notices_me: true
-  field_enable_offices_and_program: true
-  field_enable_projects_menu_item: true
   field_legacy_path: true
   field_menu_link: true
   field_official_title: true
