--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -56,6 +56,7 @@ third_party_settings:
     regions:
       top_left:
         - field_summary
+        - group_site_menu_entity_view_1
       top_right:
         - field_portrait
       center_left:
@@ -77,44 +78,27 @@ mode: default
 content:
   field_address:
     type: address_default
-    weight: 7
+    weight: 8
     region: center_right
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_email:
     type: email_mailto
-    weight: 2
+    weight: 3
     region: center_left
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_facebook:
     type: string
-    weight: 4
+    weight: 5
     region: center_center
     label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_featured_content:
-    type: entity_reference_entity_view
-    weight: 8
-    region: bottom_center
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_featured_groups:
     type: entity_reference_entity_view
     weight: 9
     region: bottom_center
@@ -131,8 +115,25 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_featured_groups:
+    type: entity_reference_entity_view
+    weight: 10
+    region: bottom_center
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_instagram:
-    weight: 6
+    weight: 7
     label: visually_hidden
     settings:
       link_to_entity: false
@@ -141,7 +142,7 @@ content:
     region: center_center
   field_phone:
     type: telephone_link
-    weight: 3
+    weight: 4
     region: center_left
     label: visually_hidden
     settings:
@@ -149,7 +150,7 @@ content:
     third_party_settings: {  }
   field_portrait:
     type: image
-    weight: 1
+    weight: 2
     region: top_right
     label: hidden
     settings:
@@ -200,13 +201,18 @@ content:
             fis-def-at: false
             fi-def-at: false
   field_twitter:
-    weight: 5
+    weight: 6
     label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: center_center
+  group_site_menu_entity_view_1:
+    weight: 1
+    region: top_left
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -222,6 +228,5 @@ hidden:
   field_official_title: true
   field_search_keywords: true
   field_shortname_or_acronym: true
-  group_site_menu_entity_view_1: true
   label: true
   uid: true
