--- a/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
@@ -22,7 +22,7 @@ process:
     plugin: migration_lookup
     migration: city_code_chapters
     no_stub: true
-    source: chapter
+    source: chapter_id
 destination:
   plugin: 'entity:node'
   default_bundle: code_section
