POWR-1124 Fix related view display mode

--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -64,7 +64,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: default
+          view_mode: related
       fields:
         field_related_content:
           id: field_related_content
